<resources>
    <string name="app_name">Story App</string>

    <string name="hint_email">Enter your email</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter you password</string>
    <string name="button_text_login">Sign in</string>
    <string name="button_text_register">Create account</string>
    <string name="button_text_dont_have_account">I don\'t have an account</string>
    <string name="action_signout">Sign out</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="error_password_not_valid">Password is not valid</string>
    <string name="hint_description_edit_text">Enter your description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="must_filled">Must be filled</string>
    <string name="image_logo">image logo</string>
    <string name="text_register">Register</string>
    <string name="text_sign_in">Sign In</string>
    <string name="created_add">Created at %1$s,</string>
    <string name="login_success">Welcome %s!</string>
    <string name="login_failed">Cek again your email and password!</string>
    <string name="register_success">Register Success!</string>
    <string name="register_failed">Email is already used!</string>
    <string name="upload_success">Story uploaded successfully!</string>
    <string name="upload_failed">Story uploaded failed!</string>
    <string name="upload_desc">Description cannot be blank!</string>
    <string name="upload_image">Image cannot be blank!</string>
    <string name="upload_permission">Not getting permissions!</string>
    <string name="name_user">Name</string>
    <string name="date">date</string>
    <string name="desc">description</string>
    <string name="language_setting">Language Seting</string>
    <string name="title_home">Home</string>
    <string name="location">Location</string>
    <string name="retry">Try Again</string>
    <string name="please_activate_location_message">Please activate your location services</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
    <string name="style_map_failed">Style parsing failed.</string>
    <string name="style_map_error">Can\'t find style. Error: %s</string>

</resources>